--- a/bib/references.bib
+++ b/bib/references.bib
@@ -7,7 +7,7 @@
   number={},
   pages={150489-150513},
   series={IEEE},
-  keywords={type:Survey;venue:Journal;Rule-based;Machine learning;Deep learning;Diseases;Electronic Health Records (EHR);Medical diagnosis;Data mining;Medical diagnostic imaging;Automatic extraction;Classification;Clinical informatics;Disease diagnosis},
+  keywords={type:Survey;venue:Journal;Diseases;Electronic Health Records (EHR);Medical diagnosis;Data mining;Medical diagnostic imaging;Automatic extraction;Classification;Clinical informatics;Disease diagnosis},
   doi={10.1109/ACCESS.2020.3016782}
 }
 @INPROCEEDINGS{8104190,
@@ -47,7 +47,7 @@
   pages={86115-86120},
   series={IEEE},
   abstract={Diabetic retinopathy (DR) is an important disease leading to blindness in humans, attracting a lot of research interests. Previous breakthrough research findings rely on deep learning techniques to diagnose diabetic retinopathy in patients with medical imaging. Although the medical imaging achieves reasonable recognition accuracy, the application of mass, easy-to-obtain and free electronic health records (EHR) data in life can make an early diagnosis of the DR more convenient and quick. In this paper, we used a set of five machine learning models to diagnose the DR in patients with the EHR data and formed a set of treatment methods. Our experimental data set is formed by processing the data provided by 301 hospitals. The experimental results show that random forest (RF) in the machine learning model can get 92% accuracy with good performance. Subsequently, the input features were analyzed and their importance graded to find that the predisposing factors triggering the human DR disease were associated with renal and liver function. In addition, disease diagnosis methods based on readily available the EHR data will become an integral part of smart healthcare and mobile healthcare.},
-  keywords={type:Research;venue:Journal;approach:Machine learning;Electronic Health Records (EHR);Diseases;Diabetes;Data models;Retinopathy;Machine learning;Medical diagnostic imaging;Diabetic retinopathy;disease diagnosis;mobile medical},
+  keywords={type:Research;venue:Journal;approach:Machine learning;Electronic Health Records (EHR);Diseases;Diabetes;Data models;Retinopathy;Medical diagnostic imaging;Diabetic retinopathy;disease diagnosis;mobile medical},
   doi={10.1109/ACCESS.2019.2918625},
   ISSN={2169-3536},
   month={}
