--- a/bib/references.bib
+++ b/bib/references.bib
@@ -7,8 +7,11 @@
   number={},
   pages={150489-150513},
   series={IEEE},
+  abstract={Electronic health records are used to extract patient's information instantly and remotely, which can help to keep track of patients' due dates for checkups, immunizations, and to monitor health performance. The Health Insurance Portability and Accountability Act (HIPAA) in the USA protects the patient data confidentiality, but it can be used if data is re-identified using `HIPAA Safe Harbor' technique. Usually, this re-identification is performed manually, which is very laborious and time captivating exertion. Various techniques have been proposed for automatic extraction of useful information, and accurate diagnosis of diseases. Most of these methods are based on Machine Learning and Deep Learning Methods, while the auxiliary diagnosis is performed using Rule-based methods. This review focuses on recently published papers, which are categorized into Rule-Based Methods, Machine Learning (ML) Methods, and Deep Learning (DL) Methods. Particularly, ML methods are further categorized into Support Vector Machine Methods (SVM), Bayes Methods, and Decision Tree Methods (DT). DL methods are decomposed into Convolutional Neural Networks (CNN), Recurrent Neural Networks (RNN), Deep Belief Network (DBN) and Autoencoders (AE) methods. The objective of this survey paper is to highlight both the strong and weak points of various proposed techniques in the disease diagnosis. Moreover, we present advantage, disadvantage, focused disease, dataset employed, and publication year of each category.},
   keywords={type:Survey;venue:Journal;Diseases;Electronic Health Records (EHR);Medical diagnosis;Data mining;Medical diagnostic imaging;Automatic extraction;Classification;Clinical informatics;Disease diagnosis},
-  doi={10.1109/ACCESS.2020.3016782}
+  doi={10.1109/ACCESS.2020.3016782},
+  ISSN={2169-3536},
+  month={},
 }
 @INPROCEEDINGS{8104190,
   author={Breischneider, Claudia and Zillner, Sonja and Hammon, Matthias and Gass, Paul and Sonntag, Daniel},
@@ -19,8 +22,11 @@
   number={},
   pages={213-218},
   series={IEEE},
+  abstract={The majority of clinical data is only available in unstructured text documents. Thus, their automated usage in data-based clinical application scenarios, like quality assurance and clinical decision support by treatment suggestions, is hindered because it requires high manual annotation efforts. In this work, we introduce a system for the automated processing of clinical reports of mamma carcinoma patients that allows for the automatic extraction and seamless processing of relevant textual features. Its underlying information extraction pipeline employs a rule-based grammar approach that is integrated with semantic technologies to determine the relevant information from the patient record. The accuracy of the system, developed with nine thousand clinical documents, reaches accuracy levels of 90% for lymph node status and 69% for the structurally most complex feature, the hormone status.},
   keywords={type:Research;venue:Conference;approach:Rule-based;Feature extraction;Semantics;Data mining;Electronic Health Records (EHR);Biochemistry;Tumors;Breast cancer;Information extraction;Natural Language Processing (NLP);Medical data analysis},
-  doi={10.1109/CBMS.2017.138}
+  doi={10.1109/CBMS.2017.138},
+  ISSN={2372-9198},
+  month={June},
 }
 @ARTICLE{8283520,
   author={Brisimi, Theodora S. and Xu, Tingting and Wang, Taiyao and Dai, Wuyang and Adams, William G. and Paschalidis, Ioannis Ch.},
