--- a/bib/references.bib
+++ b/bib/references.bib
@@ -80,6 +80,7 @@
   title = {Risk Prediction with Electronic Health Records: A Deep Learning Approach},
   booktitle = {Proceedings of the 2016 SIAM International Conference on Data Mining (SDM)},
   chapter = {},
+  year={2016},
   pages = {432-440},
   series={SIAM},
   doi = {10.1137/1.9781611974348.49},
